--- a/package.json
+++ b/package.json
@@ -46,7 +46,10 @@
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
     "globals": "^16.0.0",
+    "install": "^0.13.0",
     "jest": "^29.7.0",
+    "npm": "^11.4.2",
+    "npm-force-resolutions": "^0.0.10",
     "prettier": "^3.4.2",
     "prisma": "^6.9.0",
     "source-map-support": "^0.5.21",
@@ -75,9 +78,8 @@
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
   },
-
   "resolutions": {
-  "glob": "8.1.0",
-  "minimatch": "9.0.1"
-}
+    "glob": "8.1.0",
+    "minimatch": "9.0.1"
+  }
 }
